{
    "name": "Controls",
    "maps": [
        {
            "name": "5K",
            "id": "7330c4c5-18b4-4afe-ab85-c5d41eec84e8",
            "actions": [
                {
                    "name": "Key0",
                    "type": "Button",
                    "id": "3648b498-e4c9-4612-8847-20966766937a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Key1",
                    "type": "Button",
                    "id": "541b1717-fe2e-46f3-a4b9-2fd2f8c3295e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Key2",
                    "type": "Button",
                    "id": "402c578d-ffdd-462d-8794-5c7936b90065",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Key3",
                    "type": "Button",
                    "id": "c74b2d46-7ca6-411c-9fe8-b83ff3801d81",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Key4",
                    "type": "Button",
                    "id": "73f6eb7c-774c-4f2b-9d99-4f94a7eb5803",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2c69a595-d4a4-45fb-ae06-a1c506656428",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Key0",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6a31d11b-f35a-427a-9391-69f67981b3d2",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Key1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0a9d7912-525f-4bb2-b53d-faa3af2997e3",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Key2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f22639a6-fa87-4498-be6c-a9c1c5e1ccb8",
                    "path": "<Keyboard>/j",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Key3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4a2e75a9-f249-4732-bbec-59fd34a11d17",
                    "path": "<Keyboard>/k",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Key4",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}